# py32f030-hal

./: Cargo.toml  Embed.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: Cargo.yml
examples/: adc_block.rs  adc_block_interrupt_closure.rs  advanced_timer_block.rs  advanced_timer_block_2.rs  bit_test.rs  bitoption_test.rs  blinky.rs  blinky_lite.rs  block_uart.rs  clock.rs  crc.rs  dma_mem2mem.rs  embassy_adc.rs  embassy_advanced_timer.rs  embassy_allpin.rs  embassy_blinky.rs  embassy_delay.rs  embassy_dma_mem2mem.rs  embassy_exit.rs  embassy_i2c.rs  embassy_i2c_master_block.rs  embassy_iwdg.rs  embassy_pwm.rs  embassy_pwm_midi.rs  embassy_rtc.rs  embassy_ssd1309.rs  embassy_uart.rs  flash.rs  hello_world.rs  i2c_master_block.rs  key.rs  rcc.rs  rtc_block.rs  timer3_block.rs  timer3_pwm_block.rs  uart.rs  uart_defmt.rs
src/: bit.rs  common.rs  delay.rs  gpio.rs  interrupt.rs  lib.rs  macro_def.rs  mcu.rs  rcc.rs  usart.rs
src/adc/: future.rs  hal.rs  interrupt.rs  mod.rs  pins.rs  types.rs
src/clock/: mod.rs  peripheral.rs  types.rs
src/crc/: hal.rs  mod.rs
src/dma/: future.rs  hal.rs  mod.rs  types.rs
src/dwt/: mod.rs
src/embassy/: mod.rs  time_driver_systick.rs
src/exit/: hal.rs  mod.rs
src/exti/: future.rs  hal.rs  mod.rs  pins.rs  types.rs
src/flash/: hal.rs  mod.rs  types.rs
src/gpio/: hal.rs  mod.rs  types.rs
src/i2c/: future.rs  hal.rs  master.rs  mod.rs  pins.rs  slave.rs
src/iwdg/: hal.rs  mod.rs
src/pwr/: mod.rs
src/rtc/: future.rs  hal.rs  mod.rs  types.rs
src/spi/: hal.rs  master.rs  mod.rs  pins.rs  types.rs
src/syscfg/: mod.rs  types.rs
src/timer/: mod.rs  pins.rs
src/timer/advanced_timer/: counter.rs  future.rs  hal.rs  mod.rs  pins.rs  pwm.rs  types.rs
src/timer/general_purpose_timer/: counter.rs  future.rs  hal.rs  mod.rs  pins.rs  pwm.rs  types.rs
src/timer/timer/: counter.rs  future.rs  hal.rs  mod.rs  pins.rs  pwm.rs  types.rs
src/usart/: future.rs  hal.rs  mod.rs  pin.rs  pins.rs  types.rs
