[package]
name = "py32f030_hal"
version = "0.1.0"
description = "Peripheral Hal Crate for Puya's PY32F030 microcontroller"
edition = "2021"
keywords = ["no-std", "arm", "cortex-m", "Puya", "py32f030"]
license = "0BSD"
repository = "https://github.com/hysonglet/py32f030-hal"
documentation = "https://docs.rs/py32f030-hal"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = { version = "1.0.0" }
cast = "0.3"
cortex-m-rt = "0.7"
critical-section = { version = "1.1.2" }
embedded-hal = "1.0.0"
# For backward compatibility only. 
embedded-hal-027 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-async = { version = "1.0" }
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.1", option = true }
nb = "1"
void = { version = "1.0", default-features = false }
panic-halt = { version = "0.2.0", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
defmt = { version = "0.3.2", optional = true }
defmt-rtt = { version = "0.4", optional = true }
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "inline-asm",
] }
enumset = "1.1.3"
alloc-cortex-m = "0.4.2"
atomic-polyfill = "1.0.1"
PY32f030xx-pac = { version = "0.1.0", features = ["rt"] }
num-traits = { version = "0.2", default-features = false }
heapless = "0.7"
embassy-hal-internal = { version = "0.1.0", features = [
    "cortex-m",
    "prio-bits-3",
] }
embassy-time-driver = { version = "0.1.0", default-features = false, optional = true }
embassy-sync = { version = "0.5.0", optional = true }
embassy-executor = { version = "0.5.0", optional = true, features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.3.0", features = [
    "generic-queue-16",
], optional = true }
embassy-futures = { version = "0.1.0" }
# ssd1309 = {version = "0.4.0", optional = true}
# display-interface = "^ 0.4"
# embedded-graphics-core = { version = "^ 0.4", optional = true }
# embedded-graphics = {version ="0.8.1", optional = true}
display-interface = {version = "0.4.1", optional = true}
# oled_async = "0.1.0-alpha1"
embedded-graphics = "0.7.0"
ssd1309 = "0.3.0"
embedded-graphics-core = { version = "^ 0.3", optional = true }
display-interface-i2c = "^ 0.4"
fugit = { version = "0.3.6" }
fugit-timer = "0.1.3"
drop-move = "0.1.0"
defmt-serial = "0.10.0"
static_cell = "1"

[features]
default = ["example", "embassy"] # "embassy"
example = ["dep:defmt", "dep:defmt-rtt", "dep:panic-probe", "dep:panic-halt"]
embassy = [
    "dep:embassy-executor",
    "dep:embassy-sync",
    "dep:embassy-time",
    "time-driver",
]
## Enable the timer for use with `embassy-time` with a 1KHz tick rate.
time-driver = ["dep:embassy-time-driver", "embassy-time-driver/tick-hz-1_000"]

[dev-dependencies]

[[example]]
name = "blinky"

[[example]]
name = "embassy_uart"
required-features = ["embassy"]

[[example]]
name = "embassy_delay"
required-features = ["embassy"]

[[example]]
name = "crc"

[[example]]
name = "embassy_adc"
required-features = ["embassy"]

[profile.dev]
codegen-units = 1
opt-level = "z"
lto = "fat"
debug = true
overflow-checks = true
strip = false

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
# link-dead-code = false
overflow-checks = false
# strip = true   # 开启后release模式的日志不会显示
